# ghc-simple

./: ghc-simple.cabal
ghc-sigs/: Avail.hsig  Bag.hsig  BasicTypes.hsig  BinIface.hsig  CmmType.hsig  CoAxiom.hsig  ConLike.hsig  CorePrep.hsig  CoreSyn.hsig  CoreToStg.hsig  CostCentre.hsig  DataCon.hsig  Demand.hsig  DriverPhases.hsig  DriverPipeline.hsig  DynFlags.hsig  ErrUtils.hsig  Exception.hsig  FastString.hsig  Fingerprint.hsig  ForeignCall.hsig  GHC.hsig  GhcMonad.hsig  Hooks.hsig  HscMain.hsig  HscTypes.hsig  Id.hsig  IdInfo.hsig  IfaceEnv.hsig  IfaceSyn.hsig  MkId.hsig  Module.hsig  Name.hsig  OccName.hsig  Outputable.hsig  PrelInfo.hsig  PrelNames.hsig  PrimOp.hsig  RecDynFlags.hsig  RecTypes.hsig  (+14 more)
src/Language/Haskell/GHC/Simple/: PrimIface.hs
