name:                ghc-simple
version:             0.3
synopsis:            Simplified interface to the GHC API.
description:         The GHC API is a great tool for working with Haskell code.
                     Unfortunately, it's also fairly opaque and hard to get
                     started with. This library abstracts away the intricacies
                     of working with the GHC API, giving a general, no-nonsense
                     way to extract highly optimized (or not, depending on your
                     use case) Core, STG, custom intermediate code, and other
                     information from Haskell code.
homepage:            https://github.com/valderman/ghc-simple
license:             MIT
license-file:        LICENSE
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
copyright:           (c) 2015 Anton Ekblad
category:            Development
build-type:          Simple
cabal-version:       >=1.23

source-repository head
  type:     git
  location: https://github.com/valderman/ghc-simple.git

library ghc-sigs
  build-depends: base
  required-signatures:
    IfaceEnv
    PrelInfo
    PrimOp
    IdInfo
    Rules
    PrelNames
    Name
    BasicTypes
    Type
    Unique
    Id
    TysWiredIn
    TysPrim
    FastString
    Demand
    HscTypes
    Avail
    MkId
    TyCon
    CmmType
    UniqSupply
    TypeRep
    CoreSyn
    OccName
    Fingerprint
    IfaceSyn
    Var
    Module
    ConLike
    CoAxiom

    GHC
    DriverPhases
    DriverPipeline

    BinIface
    GhcMonad
    HscMain
    TidyPgm
    StgSyn
    CoreToStg
    SimplStg
    CorePrep
    DynFlags
    CostCentre

    ErrUtils
    Bag
    SrcLoc
    Outputable
    Hooks
    StaticFlags
    Literal
    DataCon
    ForeignCall
    Exception

    RecDynFlags
    RecTypes
  hs-source-dirs: ghc-sigs

library
  exposed-modules:
    Language.Haskell.GHC.Simple,
    Language.Haskell.GHC.Simple.Impl
    Language.Haskell.GHC.Simple.PrimIface
    Language.Haskell.GHC.Simple.Types
  other-extensions:
    CPP, PatternGuards, FlexibleInstances
  build-depends:
    ghc-sigs,
    base,
    ghc-paths    >=0.1  && <0.2,
    directory    >=1.2  && <1.3,
    filepath     >=1.3  && <1.5,
    bytestring   >=0.10 && <0.11,
    binary
  hs-source-dirs:
    src
  default-language:
    Haskell2010
